--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="icon" href="%PUBLIC_URL%/android-chrome-icon.png" sizes=192x192>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://kit.fontawesome.com/ead0419bf7.js" crossorigin="anonymous"></script>
     <title>FPL ML Live Standings</title>
   </head>
   <body>
